--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prettier": "^3.2.5"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "express-handlebars": "^7.1.2"
   }
 }
